# XTerminal

./: .command_history  .gitignore  2asiic.py  2asiic_v2.py  Cargo.toml  Chinses.md  English.md  LICENSE  README.md  agent-0.0.2.spec  agent.py  agent.spec  axec.toml  demo.py  demo0.0.1.py  test_terminal.py  tt.md  unknown_algorithm.md  计划书.md
src/: cli.rs  lib.rs  main.rs
src/llm/: claude.rs  deepseek.rs  mod.rs  openai.rs
