[package]
name = "axec"
version = "0.1.0"
authors = ["AaravLu <demolemon@outlook.at>"]
edition = "2024"

[profile.dev]
debug = false
codegen-units = 16

[profile.release]
lto = true
strip = true
debug = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rustyline = "16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
termimad = "0.33"
